# flashcards

./: Cargo.toml  LICENSE  README.md  README.org  fc.org
src/: content.rs  db.rs  files.rs  gui.rs  main.rs  org.rs  sr.rs
src/database/: db.rs  documents.rs  flashcards.rs  mod.rs  paths.rs
src/ui/: app.rs  cards_ui.rs  content_ui.rs  files_ui.rs  gui.rs  mod.rs  settings_ui.rs
