[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = "0.9.0"
eframe = "0.17.0"
egui = "0.17.0"
fallible-iterator = "0.2.0"
rand = "0.8.4"
rfd = "0.7.0"
walkdir = "2"
chrono = "0.4.19"
serde = { version = "1", features = ["derive"], optional = true }
sea-query = { version = "^0", features = [
    "rusqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
] }

[dependencies.rusqlite]
version = "^0.26"
features = [
    "bundled",
    "chrono",
    "serde_json",
    "uuid",
]

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]
serialize = ["egui/serialize",  "serde"]
